--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 .row {
   align-items: center;
 }
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -37,6 +38,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -44,4 +46,8 @@
 
 .container {
   max-width: 100% !important;
+}
+
+html {
+  scroll-behavior: smooth;
 }
