--- a/src/static/News.css
+++ b/src/static/News.css
@@ -8,6 +8,16 @@
     color: #000000;    
 }
 
+.ongoing-event-title {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2.5rem;
+    text-align: left;
+    padding: 2vw 5vw 2.5vw 10vw;
+    color: #000000;    
+}
+
 .timeline-title {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
